chore: [wip] Cleanup styling: Divide main contents into 2 columns, Implement Tailwind & Prettier all files

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,12 @@
 {
+  "semi": true,
+  "arrowParens": "avoid",
   "tabWidth": 2,
-  "singleQuote": false
+  "printWidth": 100,
+  "singleQuote": false,
+  "jsxSingleQuote": false,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
