--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "format": "prettier --write .",
-    "pre-commit": "npm run lint --fix && npm run format",
+    "pre-commit": "lint-staged",
     "prepare": "husky install"
   },
   "dependencies": {
@@ -44,5 +44,14 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.4.8"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{css,scss,html,json}": [
+      "prettier --write"
+    ]
   }
 }
